@startuml layout

skinparam classFontSize 12
skinparam classAttributeFontSize 11
skinparam ranksep 30
skinparam nodesep 25

title Layout tree, layout manager, GUIFile XML loader

class "Tree<T>" {
    -data: T
    -parent: Tree<T>*
    -children: vector<unique_ptr<Tree<T>>>

    +Tree(data: T)

    +getData(): T&
    +getParent(): Tree<T>*
    +isRoot(): bool
    +isLeaf(): bool
    +getChildren(): vector<unique_ptr<Tree<T>>>&
    +addChild(childData: T): Tree<T>*
}

class Layout {
    -start: vec2
    -end: vec2
    -active: bool
    -name: string
    -elements: vector<unique_ptr<GUIElement>>

    +Layout(start: vec2, end: vec2, active: bool, name: string)
    +Layout(other: const Layout&)
    +operator=(other: const Layout&): Layout&

    +addElement(element: unique_ptr<GUIElement>): void
    +setActive(active: bool): void
    +isActive(): bool
    +setName(name: string): void
    +getName(): string
    +getStart(): vec2
    +getEnd(): vec2

    +resolveAbsStart(parentStart: ivec2, parentEnd: ivec2): ivec2
    +resolveAbsEnd(parentStart: ivec2, parentEnd: ivec2): ivec2
    +draw(screen: Screen&, parentStart: ivec2, parentEnd: ivec2): void
}

note right of Layout
  start/end are relative (0.0–1.0) to parent.
  draw() is a no-op when active == false.
  Copy ctor + operator= deep-clone each child
  via GUIElement::clone() (CRTP via Cloneable).
end note

class LayoutManager {
    -root: Tree<Layout>

    -LayoutManager()
    -{static} renderTree(node: Tree<Layout>&, screen: Screen&, parentStart: ivec2, parentEnd: ivec2): void

    +{static} getInstance(): LayoutManager&
    +getRoot(): Tree<Layout>&
    +addChild(parent: Tree<Layout>*, layout: Layout): Tree<Layout>*
    +render(screen: Screen&, screenStart: ivec2, screenEnd: ivec2): void
}

note right of LayoutManager
  Singleton. Owns the root Tree<Layout>.
  render() traverses the tree using
  painter's algorithm (parent before children).
end note

class GUIFile {
    -points: vector<Point>
    -lines: vector<Line>
    -boxes: vector<Box>
    -tokens: vector<string>

    +GUIFile()
    +setPoint(point: Point): void
    +setLine(line: Line): void
    +setBox(box: Box): void
    +getPoints(): vector<Point>
    +getLines(): vector<Line>
    +getBoxes(): vector<Box>
    +readFile(fileName: string, manager: LayoutManager&): void
    +writeFile(fileName: string, manager: LayoutManager&): void
    -splitString(str: string, delim: string): vector<string>
}

"Tree<T>" *-- "Tree<T>" : children
LayoutManager *-- "Tree<T>" : root
LayoutManager ..> Layout : manages

@enduml
